Fix: Wrapping of site notification text in mobile

--- a/app/assets/stylesheets/design/layout/_header.scss
+++ b/app/assets/stylesheets/design/layout/_header.scss
@@ -33,6 +33,11 @@
 }
 
 @media only screen and (max-width: 500px) {
+
+  .site-notification-text {
+    width: 100% !important;
+  }
+
   .header {
     // reduce logo size at smaller screen sizes
     .logo {
